[package]
name = "fish_net_radio"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_jsl = {
    git = "https://github.com/jwkunz/lib_jsl.git"
}
num-complex = "0.4.6"
rustfft = "6.4.1"
crc = "2.1"
serde = "1.0.228"
serde_yaml = "0.9.34"
tokio = {version="1.52.3",features=["full"]}
zmq = "0.10.0"
ctrlc = "3.4.0"
